# quill

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
crates/quill-cli/: Cargo.toml
crates/quill-cli/src/commands/: bench.rs
crates/quill-codegen/src/: client.rs  server.rs
crates/quill-core/: Cargo.toml
crates/quill-core/benches/: frame_benchmark.rs
crates/quill-core/src/: framing.rs  lib.rs
crates/quill-grpc-bridge/: Cargo.toml
crates/quill-grpc-bridge/src/: bridge.rs  lib.rs  metadata.rs  status.rs
crates/quill-rest-gateway/: Cargo.toml
crates/quill-rest-gateway/src/: converter.rs  error.rs  lib.rs  mapping.rs  router.rs
crates/quill-server/: Cargo.toml
crates/quill-server/benches/: middleware_benchmark.rs
crates/quill-server/src/: lib.rs  middleware.rs  router.rs  security.rs  server.rs
crates/quill-tensor/src/: lib.rs  pool.rs  stream.rs
crates/quill-transport/: Cargo.toml
crates/quill-transport/src/: hyper.rs  lib.rs  webtransport.rs
deployment/examples/: README.md
deployment/examples/docker/: Dockerfile  docker-compose.yml
deployment/examples/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
deployment/examples/monitoring/: prometheus.yml
docs/: deployment.md  gpu-streaming.md  grpc-bridge.md  middleware.md  performance.md  rest-gateway.md  security.md  webtransport.md
examples/: README.md
examples/chat/: Cargo.toml
examples/chat/src/: lib.rs
examples/grpc-bridge/: Cargo.toml  build.rs
examples/grpc-bridge/src/: lib.rs  server.rs
examples/upload/: Cargo.toml
examples/upload/src/: lib.rs
examples/webtransport/: Cargo.toml
examples/webtransport/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_frame_parser.rs  fuzz_problem_details.rs  fuzz_varint.rs
