[package]
name = "quill-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport layer implementations for Quill RPC (Classic/Turbo/Hyper profiles)"

[dependencies]
quill-core = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
h2 = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# HTTP/3 and QUIC
quinn = { workspace = true, optional = true }
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
h3-webtransport = { workspace = true, optional = true }
h3-datagram = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rcgen = { version = "0.12", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
http3 = ["quinn", "h3", "h3-quinn", "rustls", "rcgen", "futures"]
webtransport = ["http3", "h3-webtransport", "h3-datagram"]

[dev-dependencies]
tokio = { workspace = true }
